--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -1,9 +1,7 @@
 {
     "compilerOptions": {
         "target": "es2020",
-        "module": "esnext",
-        "moduleResolution": "node",
-        "esModuleInterop": true,
+        "module": "CommonJS",
         "lib": [
             "esnext"
         ],
