--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "author": "Zim",
     "license": "SEE LICENSE IN ./LICENSE",
     "dependencies": {
+        "@types/node": "^16.11.29",
         "cancellable": "github:zimtsui/cancellable"
-    },
-    "peerDependencies": {
-        "@types/node": "^14.0.0"
     }
 }
