--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "timeout",
+    "name": "node-time-engine",
     "version": "0.0.1",
     "description": "",
-    "main": "./build/timeout.js",
-    "types": "./build/timeout.d.ts",
+    "main": "./build/index.js",
+    "types": "./build/index.d.ts",
     "scripts": {
         "build": "tsc -b ./src/tsconfig.json",
         "test": "echo \"Error: no test specified\" && exit 1"
