--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
     "name": "node-time-engine",
     "version": "0.0.1",
     "description": "",
-    "main": "./build/index.js",
-    "types": "./build/index.d.ts",
+    "main": "./build/node-time-engine.js",
+    "types": "./build/node-time-engine.d.ts",
     "scripts": {
         "build": "tsc -b ./src/tsconfig.json",
+        "clean": " rm -rf ./build",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Zim",
     "license": "SEE LICENSE IN ./LICENSE",
     "dependencies": {
-        "@types/node": "^16.11.29",
+        "@types/node": "^16.11.29"
+    },
+    "peerDependencies": {
         "cancellable": "github:zimtsui/cancellable"
     }
 }
