--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "types": "./build/node-time-engine.d.ts",
     "scripts": {
         "build": "tsc -b ./src/tsconfig.json",
-        "clean": " rm -rf ./build",
+        "clean": "rm -rf ./build",
+        "rebuild": "npm run clean && npm run build",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Zim",
