--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "time-engine-like": "github:zimtsui/time-engine-like"
     },
     "dependencies": {
-        "@types/node": "^16.11.40"
+        "@types/node": "^16.11.40",
+        "autobind-decorator": "^2.4.0"
     }
 }
